--- a/projeto-pokemon/index.html
+++ b/projeto-pokemon/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="src/imagens/pokedex.ico" type="image/x-icon">
     <!--ctrl + espaço para escolher o .ico-->
-    <title>listagem Pokémon</title>
+    <title>Listagem Pokémon</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;800&display=swap" rel="stylesheet">
@@ -22,6 +22,7 @@
         <a href="#"> <!--link que leva para outra pagina-->
             <img src="./src/imagens/pokeball.png" alt="pokebola" class="logo">
         </a>
+        <img src="./src/imagens/pokemon.png" alt="logo-pokemon" class="logo-pokemon">
         <button id="botao-alterar-tema">
             <img src="./src/imagens/sun.png" alt="imgem do sol" class="imagem-botao">
         </button>
